; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Thread.c_Thread_Get.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Thread.c_Thread_Get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Thread = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.Thread* (%struct.Thread*, %struct.Thread*)* @Thread_Get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.Thread* @Thread_Get(%struct.Thread* %0, %struct.Thread* %1) #0 {
  %3 = alloca %struct.Thread*, align 8
  %4 = alloca %struct.Thread*, align 8
  %5 = alloca %struct.Thread*, align 8
  store %struct.Thread* %0, %struct.Thread** %3, align 8
  store %struct.Thread* %1, %struct.Thread** %4, align 8
  %6 = load %struct.Thread*, %struct.Thread** %3, align 8
  store %struct.Thread* %6, %struct.Thread** %5, align 8
  %7 = load %struct.Thread*, %struct.Thread** %5, align 8
  %8 = getelementptr inbounds %struct.Thread, %struct.Thread* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.Thread*, %struct.Thread** %4, align 8
  %11 = call i32 @get(i32 %9, %struct.Thread* %10)
  %12 = call %struct.Thread* @deref(i32 %11)
  ret %struct.Thread* %12
}

declare dso_local %struct.Thread* @deref(i32) #1

declare dso_local i32 @get(i32, %struct.Thread*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
